<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/navy" />

    <TextView
        android:id="@+id/confirmationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnClose"
        tools:text="Check your internet connection" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negativeButton"
        android:background="@drawable/rounded_border_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        android:text="@string/no"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/positiveButton"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positiveButton"
        android:layout_width="0dp"
        android:background="@drawable/rounded_border_bg"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmationMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>