<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp"
        android:paddingHorizontal="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/base_color"
            android:contentDescription="@string/search_button"
            android:src="@drawable/ic_search"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contacts"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="8dp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/btn_add"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:tint="@color/base_color"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_add"/>

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:paddingHorizontal="8dp"
            tools:listitem="@layout/contact_item"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>